[gd_scene load_steps=13 format=2]

[ext_resource path="res://player/cube_glow.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=3]
[ext_resource path="res://player/cube.png" type="Texture" id=4]
[ext_resource path="res://particles/particles_tileset.png" type="Texture" id=5]

[sub_resource type="PhysicsMaterial" id=5]

[sub_resource type="Animation" id=17]
resource_name = "death"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 20 )

[sub_resource type="CanvasItemMaterial" id=18]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=20]
offsets = PoolRealArray( 0, 0.337143, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=21]
gradient = SubResource( 20 )

[sub_resource type="ParticlesMaterial" id=19]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 150, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.29
angular_velocity = 274.29
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 21.62
damping_random = 0.28
scale = 0.1
color_ramp = SubResource( 21 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="QuadMesh" id=4]
size = Vector2( 40, 40 )

[node name="player" type="RigidBody2D" groups=["player"]]
position = Vector2( 105, 82 )
mass = 0.5
physics_material_override = SubResource( 5 )
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 3 )

[node name="death" type="AnimationPlayer" parent="."]
anims/death = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 1, 55 )

[node name="death_effect" type="Particles2D" parent="."]
modulate = Color( 0, 0.976471, 1, 1 )
material = SubResource( 18 )
emitting = false
amount = 60
lifetime = 10.0
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 19 )
texture = ExtResource( 5 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
modulate = Color( 0, 3.44, 4, 1 )
mesh = SubResource( 4 )
texture = ExtResource( 4 )

[node name="CubeGlow" type="Sprite" parent="." groups=["glow"]]
modulate = Color( 0, 4.07059, 4.03137, 0.364706 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 1 )

[node name="Cube" type="Sprite" parent="."]
modulate = Color( 0, 3.44, 4, 1 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
